# HitchOpen-LGSVL-hainan_university

./: .gitignore  LICENSE  Makefile  README.md  common.iron.repos  race.env  source_all.sh  svl.iron.repos
src/common/base_common/: CMakeLists.txt  package.xml  setup.cfg
src/common/base_common/base_common/: __init__.py  launch.py
src/common/base_common/src/: flags.cpp
src/common/competition_timer/: package.xml  setup.cfg  setup.py
src/common/competition_timer/competition_timer/: competition_timer.py
src/common/competition_timer/config/: IMS.yaml  LVMS.yaml  competition.yaml
src/common/competition_timer/launch/: competition_timer.launch.py
src/common/race_metadata/: CMakeLists.txt  package.xml
src/common/race_metadata/rviz/: autonomy.rviz
src/common/race_msgs/: CMakeLists.txt  README.md  package.xml
src/common/race_msgs/msg/: BrakeReport.msg  CtManagerDiag.msg  EnginePressuresReport.msg  EngineReport.msg  FaultReport.msg  LqgTelemetry.msg  PerceptionHealthTelemetry.msg  PerceptionTelemetry.msg  Push2PassReport.msg  RaceControlRestOfField.msg  RacePathCommand.msg  RdeTelemetry.msg  RideHeightReport.msg  RoadLinePolynom.msg  RoadLinesPolynoms.msg  RppPose.msg  RppTelemetry.msg  RppTrajectory.msg  RvcTelemetry.msg  SlipAngleReport.msg  SteeringReport.msg  StopType.msg  StrategyType.msg  TargetTrajectoryCommand.msg  ThrottleReport.msg  TireTempReport.msg  TrackedObjectTelemetry.msg  TspTelemetry.msg  VehicleBitfields.msg  VehicleCommand.msg  VehicleControlCommand.msg  VehicleFlag.msg  VehicleKinematicState.msg  VehicleManualControlCommand.msg  VehicleStatus.msg  VehicleTelemetry.msg  WallBoundarySegment.msg
src/common/race_msgs/srv/: UpdateVehicleModel.srv
src/common/target_trajectory_line/: CMakeLists.txt  package.xml
src/common/target_trajectory_line/include/: ttl.hpp  ttl_loader.hpp  ttl_row.hpp  ttl_tree.hpp
src/common/target_trajectory_line/src/: ttl.cpp  ttl_loader.cpp  ttl_tree.cpp
src/control/race_vehicle_controller/: CMakeLists.txt  README.md  package.xml  plugins.xml
src/control/race_vehicle_controller/launch/: rvc.launch.py
src/control/race_vehicle_controller/plugin_docs/: add_steer_bias.md  compliance.md  compute_slip_angle.md  gear_manager.md  input_validation.md  lqg_controller_plugin.md  override.md
src/control/race_vehicle_controller/src/: pid_controller.cpp  rvc_node.cpp  rvc_utils.cpp
src/control/race_vehicle_controller/test/: test_rvc.cpp
src/control/simple_control/: CMakeLists.txt  package.xml  plugins.xml
src/control/simple_control/launch/: control.launch.py
src/control/simple_control/params/: simple_control.yml
src/control/simple_control/src/: controller_manager_node.cpp
src/launch/autonomy_launch/: CMakeLists.txt  package.xml
src/launch/autonomy_launch/launch/: autonomy_all.launch.py  autonomy_core.launch.py  misc.launch.py
src/launch/svl_launch/: CMakeLists.txt  package.xml
src/launch/svl_launch/config/: svl.env  uuids.json
src/launch/svl_launch/launch/: svl.launch.py  svl_all.launch.py
src/launch/svl_launch/scripts/: launch_ossdc.py
src/localization/odometry_state_estimator/: CMakeLists.txt  package.xml
src/localization/odometry_state_estimator/launch/: odometry_state_estimator.launch.py
src/localization/odometry_state_estimator/param/: odometry_state_estimator_iac_car.param.yaml
src/localization/odometry_state_estimator/src/: odometry_state_estimator_node.cpp
src/localization/vehicle_kinematic_state/: CMakeLists.txt  package.xml
src/localization/vehicle_kinematic_state/launch/: vehicle_kinematic_state.launch.py
src/localization/vehicle_kinematic_state/param/: vehicle_kinematic_state_hawaii_gokart.param.yaml  vehicle_kinematic_state_iac_car.param.yaml  vehicle_kinematic_state_svl_iac_car.param.yaml
src/localization/vehicle_kinematic_state/src/: vehicle_kinematic_state_node.cpp
src/planning/global_planning/: CMakeLists.txt  package.xml  readme.md
src/planning/global_planning/launch/: global_planning.launch.py
src/planning/global_planning/misc/: track_visualizer.py
src/planning/global_planning/params/: LVMS_SVL_ENU_TTL_15.csv  global_planning.yml  waypoints.csv
src/planning/global_planning/src/: global_planning_node.cpp
src/planning/race_decision_engine/: CMakeLists.txt  package.xml
src/planning/race_decision_engine/launch/: race_decision_engine.launch.py
src/planning/race_decision_engine/param/: race_decision_engine_aw_sim_iac_ims.param.yaml  race_decision_engine_aw_sim_iac_ks.param.yaml  race_decision_engine_aw_sim_iac_lvms.param.yaml  race_decision_engine_aw_sim_iac_putnam.param.yaml  race_decision_engine_hawaii_gokart_aais.param.yaml  race_decision_engine_hawaii_gokart_mgkt.param.yaml  race_decision_engine_hawaii_gokart_pursuit.param.yaml  race_decision_engine_hawaii_gokart_uhmcp.param.yaml  race_decision_engine_iac_ims.param.yaml  race_decision_engine_iac_ks.param.yaml  race_decision_engine_iac_ksc.param.yaml  race_decision_engine_iac_lor.param.yaml  race_decision_engine_iac_lvms.param.yaml  race_decision_engine_iac_putnam.param.yaml  race_decision_engine_svl_lvms.param.yaml  race_decision_engine_svl_putnam.param.yaml
src/planning/race_decision_engine/resources/: parameters.yaml  race_decision_engine_bt_nodes.xml
src/planning/race_path_planner/: CMakeLists.txt  package.xml
src/planning/race_path_planner/launch/: race_path_planner.launch.py
src/planning/race_path_planner/param/: race_path_planner_aw_sim_hawaii_gokart_aais.param.yaml  race_path_planner_aw_sim_iac_lvms.param.yaml  race_path_planner_iac_ks.param.yaml
src/planning/race_path_planner/src/: frenet_path_planner.cpp  polynomials.cpp  race_path_planner_node.cpp
src/simulation/autoware_lgsvl_interface/: CMakeLists.txt  package.xml
src/simulation/autoware_lgsvl_interface/launch/: autoware_lgsvl_interface.launch.py
src/simulation/autoware_lgsvl_interface/params/: autoware_lgsvl_interface.yml
src/simulation/autoware_lgsvl_interface/src/: autoware_lgsvl_interface.cpp
src/simulation/lgsvl_interface/: CMakeLists.txt  package.xml
src/simulation/lgsvl_interface/launch/: lgsvl_interface.launch.py
(+351 files in other folders)
