<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>competition_timer</name>
  <version>0.0.0</version>
  <description>Competition Timer</description>
  <maintainer email="ztl1998@berkeley.edu">roar-tl</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>lgsvl_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>python3-pynput</depend>
  <depend>tf-transformations</depend>
  <depend>python3-pymap3d-pip</depend>
  <depend>race_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
