<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>race_msgs</name>
  <version>0.0.3</version>
  <description>Messages for the AI Racing Tech race_common repo</description>
  <maintainer email="mdlopezme@gmail.com">Moises Lopez</maintainer>
  <license>LGPLv3</license>
  <author email="sisahawork@gmail.com">Siddharth Saha</author>
  <author email="dvd@gaiaplatform.io">David Von Derau</author>
  <author email="haorux@andrew.cmu.edu">Haoru Xue</author>
  <author email="mdlopezme@gmail.com">Moises Lopez</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>gps_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
