<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>target_trajectory_line</name>
  <version>0.0.0</version>
  <description>TBD</description>
  <maintainer email="haorux@andrew.cmu.edu">Haoru Xue</maintainer>
  <license>LGPLv3</license>
  <author email="haorux@andrew.cmu.edu">Haoru Xue</author>
  <author email="dvd@gaiaplatform.io">David Von Derau</author>
  <author email="sisahawork@gmail.com">Siddharth Saha</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geographiclib</depend>
  <depend>cgal</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
