<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>race_vehicle_controller</name>
  <version>3.0.0</version>
  <description>RVC Gen 3</description>
  <maintainer email="haorux@andrew.cmu.edu">Haoru Xue</maintainer>
  <license>LGPLv3</license>
  <author email="haorux@andrew.cmu.edu">Haoru Xue</author>
  <author email="dvd@gaiaplatform.io">David Von Derau</author>
  <author email="dkalaria@andrew.cmu.edu">Dvij Kalaria</author>
  <author email="djnighti@ucsd.edu">Dominic Nightingale</author>
  <author email="sisahawork@gmail.com">Siddharth Saha</author>
  <author email="adithsundram@berkeley.edu">Adith Sundram</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>race_msgs</depend>
  <depend>base_common</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>eigen</depend>
  <depend>pluginlib</depend>
  <depend>cgal</depend>
  <depend>transform_helper</depend>
  <depend>target_trajectory_line</depend>
  <depend>vehicle_model</depend>
  <depend>lqg_controller</depend>
  <depend>libopencv-dev</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>lmpc_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <exec_depend>art_mpc_interface</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
