<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>odometry_state_estimator</name>
  <version>0.0.0</version>
  <description>Node that takes in raw sensor data and output VehicleOdometry msg </description>
  <maintainer email="mdlopezme@gmail.com">Moises Lopez</maintainer>
  <license>LGPLv3</license>
  <author email="mdlopezme@gmail.com">Moises Lopez</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>base_common</depend>
  <depend>race_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>transform_helper</depend>
  <depend>target_trajectory_line</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>