<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vehicle_kinematic_state</name>
  <version>0.0.0</version>
  <description>Node that takes in raw sensor data and output VehicleKinematicState msg </description>
  <maintainer email="sisahawork@gmail.com">Siddharth Saha</maintainer>
  <maintainer email="haorux@andrew.cmu.edu">Haoru Xue</maintainer>
  <maintainer email="mdlopezme@gmai.com">Moises Lopez</maintainer>
  <license>LGPLv3</license>
  <author email="mdlopezme@gmail.com">Moises Lopez</author>
  <author email="sisahawork@gmail.com">Siddharth Saha</author>
  <author email="haorux@andrew.cmu.edu">Haoru Xue</author>
  <author email="wuxiaohua1011@berkeley.edu">Michael Wu</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>race_msgs</depend>
  <depend>gps_msgs</depend>
  <depend>base_common</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>sensor_msgs</depend>
  <depend>target_trajectory_line</depend>
  <depend>transform_helper</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>odometry_state_estimator</depend>

  <exec_depend>robot_localization</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
